Fix figcaption on figure.inline on mobile breakpoints

--- a/ArticleTemplates/assets/scss/modules/_figure.scss
+++ b/ArticleTemplates/assets/scss/modules/_figure.scss
@@ -30,9 +30,6 @@ figure {
 		font-family: $agate-sans;
 		@include meta();
 		border-bottom: 1px dotted $shadow;
-		@include padding(0.5, 0, 2, 0);
-		@include mq($from: col1) {
-			@include padding(0.5, 1, 2, 1);
-		}
+		@include padding(0.5, 1, 2, 1);
 	}
 }
